BAP-18159: Buffer small tasks - fix vertical-align select2 results image

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/select2.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/select2.scss
@@ -380,6 +380,7 @@
 
         img {
             border-radius: $select2-results-image-border-radius;
+            vertical-align: $select2-results-image-vertical-align;
         }
 
         .select2-no-results,
